# rustgames

./: .gitignore  ANIMATION_GUIDE.md  ANIMATION_IMPLEMENTATION_GUIDE.md  ANIMATION_MODULE_README.md  BEFORE_AFTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  HOW_ANIMATION_WORKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MISSION_ACCOMPLISHED.md  OPTIMIZATIONS.md  README.md  SECURITY.md  TECHNICAL_VERIFICATION.md  test_all.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cl.yml  qodana_code_quality.yml  release.yml
TODO/Archive/: TODO - Translation & Localization.md
TODO/Project/: Android Implementation.md  Fix bugs with Texture and effects.md  RustGames CLI.md  TODO - Translation & Localization.md
examples/: animation_demo.rs  demo_single.rs  demo_stress.rs  error_demo.rs  game_example.rs  runner_i18n.rs  sandbox.rs  space_chicken.rs  stress_color_chaos.rs  stress_particle_blizzard.rs  vn_cat_cafe.rs  vn_last_train.rs  vn_moonlit.rs
src/: lib.rs  prelude.rs
src/audio/: audio_system.rs  mod.rs
src/controllers/: animation_controller.rs  camera_controller.rs  mod.rs  text_controller.rs  texture_controller.rs  typewriter_controller.rs
src/core/: app.rs  context.rs  engine.rs  fps_counter.rs  game.rs  mod.rs  time.rs
src/error/: audio_error.rs  graphics_error.rs  mod.rs  text_error.rs
src/graphics/: camera.rs  color.rs  color_ops.rs  instance.rs  instanced_shader.wgsl  mod.rs  (+7 more)
tests/: instance_tests.rs  renderer_alpha_tests.rs  unit.rs
(+90 files in other folders)
