[package]
name = "rustgames"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
wgpu = { version = "28.0.0", features = ["spirv"] }
glam = {version = "0.30.10", features = ["bytemuck"]}
cpal = "0.17.1"
pollster = "0.4.0"
image = "0.25.9"
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
wgpu_text = "28.0.1"