[package]
name = "rustgames"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An engine for rust using wgpu and winit."

[dependencies]
winit = "0.30.12"
wgpu = { version = "28.0.0", features = ["spirv"] }
glam = {version = "0.31.0", features = ["bytemuck"]}
pollster = "0.4.0"
image = "0.25.9"
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
wgpu_text = "28.0.1"
rand = "0.10.0-rc.6"
walkdir = "2.5.0"
kira = "0.12.0"
aam-rs = {version = "1.2.0", features = ["perf-hash"]}